fix: rule overflow hidden

--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -23,7 +23,7 @@ body {
   &::-webkit-scrollbar {
     display: none;
   }
-  &:has(header.open-nav-side, header~.header--additionals > .header-nav-dropdown-menu, .modal, .loading_submit, .open-menu) {
+  &:has(header.open-nav-side, header~.header--additionals > .header-nav-dropdown-menu, .modal, .loading_submit, .menu_open) {
     overflow: hidden;
   }
   h1,
